# vroom

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  code-check.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
cmake/: External.cmake  Flags.cmake
cmake/assets/: Icon.icns  Info.plist.in
src/: app.cpp  generated.hpp.in  main.cpp  settings.hpp
src/assets/: builder.cpp  builder.hpp  sounds.cpp  sounds.hpp  textures.cpp  textures.hpp
src/assets/data/sounds/car/: engine.hpp  hit.hpp  tires.hpp
src/assets/data/sounds/ui/: ok.hpp  other.hpp
src/assets/data/textures/car/: car_black_1.hpp  car_blue_1.hpp  car_green_1.hpp  car_red_1.hpp  car_yellow_1.hpp
src/assets/data/textures/road/: road_sand01.hpp  road_sand35.hpp  road_sand37.hpp  road_sand39.hpp  road_sand87.hpp  road_sand88.hpp  road_sand89.hpp
src/core/: backend.cpp  backend.hpp  colors.hpp  engine.cpp  engine.hpp  game.cpp  game.hpp  gamepad.cpp  gamepad.hpp  imgui_sfml_ctx.cpp  imgui_sfml_ctx.hpp  input.cpp  input.hpp  io.cpp  io.hpp  misc.cpp  misc.hpp  sfx.cpp  sfx.hpp  states.hpp  ui.cpp  ui.hpp  widgets.cpp  widgets.hpp  window.cpp  window.hpp  world.cpp  world.hpp
src/core/graphics/: debug.cpp  debug.hpp
src/core/platform/: posix.cpp  posix.hpp  windows.cpp  windows.hpp
src/game/: entities.cpp  entities.hpp
tests/: AGENTS.md
tests/assets/: sounds.test.cpp  test_textures.cpp  textures.test.cpp
tests/core/: backend.test.cpp  colors.test.cpp  io.test.cpp  platform.test.cpp  test_backend.cpp  test_world.cpp  ui.test.cpp  world.test.cpp
tests/game/: entities.test.cpp
